--- a/errai-marshalling/pom.xml
+++ b/errai-marshalling/pom.xml
@@ -20,13 +20,14 @@
     <dependencies>
         <dependency>
             <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-bus</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <artifactId>errai-codegen</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
+
         <dependency>
             <groupId>org.jboss.errai</groupId>
-            <artifactId>errai-codegen</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <artifactId>errai-common</artifactId>
+            <version>${project.parent.version}</version>
         </dependency>
 
         <dependency>
