--- a/errai-marshalling/pom.xml
+++ b/errai-marshalling/pom.xml
@@ -30,6 +30,7 @@
             <version>${project.parent.version}</version>
         </dependency>
 
+
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
@@ -51,7 +52,7 @@
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
             <version>1.0-SP4</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
